--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "social-media-app",
   "version": "0.1.0",
+  "homepage": "https://mr-abd21.github.io/social-media-clone/",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^1.0.0",
@@ -19,10 +20,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
